# wasm-genetic

./: 1.worker.js  README.md  index.html  main.2d694667d0cd3cb8f98f.js  main.5f3f7db4457e83a5714a.js  package-lock.json  package.json  webpack.config.js  worker.js
crate/: Cargo.toml
crate/src/: lib.rs
js/: app.css  app.js  index.js  worker.js
