[package]
authors = ["Daniel Budden"]
categories = ["wasm"]
description = "Genetic Algorithm in WebAssembly"
license = "Apache-2.0/MIT"
name = "wasm-genetic"
readme = "./README.md"
repository = "https://github.com/d3spis3d/wasm-genetic"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.25"
js-sys = "0.3"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.rand]
version = "0.6.5"
features = [
  "wasm-bindgen",
]
